{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 595,
  "lineage": "47b00006-54e9-9159-6985-cc38e31d9562",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dashboard-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:route-table/rtb-093b93abf4a628a4b",
            "default_route_table_id": "rtb-093b93abf4a628a4b",
            "id": "rtb-093b93abf4a628a4b",
            "owner_id": "187739379851",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c61e5eb34beb811b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dashboard-public-rtb"
            },
            "tags_all": {
              "Name": "dashboard-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dashboard-igw",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dashboard-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a32279178ed89b6",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:elastic-ip/eipalloc-09a32279178ed89b6",
            "association_id": "eipassoc-085e6318d69a52cd5",
            "domain": "vpc",
            "id": "eipalloc-09a32279178ed89b6",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0ea9342ae1a4ad21c",
            "private_dns": "ip-10-0-0-77.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.77",
            "public_dns": "ec2-13-196-139-167.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.196.139.167",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-nat-eip"
            },
            "tags_all": {
              "Name": "dashboard-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "eipalloc-09a32279178ed89b6",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "counting_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056b9c4e492f025fa",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:instance/i-054e26f604d76fb7c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054e26f604d76fb7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "counting-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-013571b2be95a35f8"
              }
            ],
            "primary_network_interface_id": "eni-013571b2be95a35f8",
            "private_dns": "ip-10-0-2-14.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.14",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-097ed69d2e9011cb2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caf96893589354a6",
            "tags": {
              "Name": "counting-instance1"
            },
            "tags_all": {
              "Name": "counting-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0226789ca3ab639ac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "i-054e26f604d76fb7c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_security_group.counting-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "counting_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056b9c4e492f025fa",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:instance/i-0ea3269156ba70370",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea3269156ba70370",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "counting-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0263edb94e91d5039"
              }
            ],
            "primary_network_interface_id": "eni-0263edb94e91d5039",
            "private_dns": "ip-10-0-3-238.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.238",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f34d7bc8890a3f6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04edc61739d575b4b",
            "tags": {
              "Name": "counting-instance2"
            },
            "tags_all": {
              "Name": "counting-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0226789ca3ab639ac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "i-0ea3269156ba70370",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_security_group.counting-instance-sg",
            "aws_subnet.dashboard-private-subnet2",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dashboard_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056b9c4e492f025fa",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:instance/i-085b102572d3305ca",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085b102572d3305ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c854995acd9e867c"
              }
            ],
            "primary_network_interface_id": "eni-0c854995acd9e867c",
            "private_dns": "ip-10-0-2-174.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.174",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9bcefa8bed735b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caf96893589354a6",
            "tags": {
              "Name": "dashboard-instance1"
            },
            "tags_all": {
              "Name": "dashboard-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db4d0bf948c68b9d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "i-085b102572d3305ca",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_lb.counting-alb",
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dashboard_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056b9c4e492f025fa",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:instance/i-032d316415fbbb126",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032d316415fbbb126",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f345fa66b1fc8aea"
              }
            ],
            "primary_network_interface_id": "eni-0f345fa66b1fc8aea",
            "private_dns": "ip-10-0-3-113.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.113",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072f9ec91d3376d10",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04edc61739d575b4b",
            "tags": {
              "Name": "dashboard-instance2"
            },
            "tags_all": {
              "Name": "dashboard-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db4d0bf948c68b9d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "i-032d316415fbbb126",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_lb.counting-alb",
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056b9c4e492f025fa",
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:instance/i-0d2466c54c8ec519d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2466c54c8ec519d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jump-host-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0429f274a166de03d"
              }
            ],
            "primary_network_interface_id": "eni-0429f274a166de03d",
            "private_dns": "ip-10-0-0-64.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-43-207-202-22.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.207.202.22",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0d4ea6d7a252a03",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03651b44de7d52f7e",
            "tags": {
              "Name": "jump-host"
            },
            "tags_all": {
              "Name": "jump-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056a25ae9c351c56d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "i-0d2466c54c8ec519d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.jump-host-sg",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dashboard-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:internet-gateway/igw-0c61e5eb34beb811b",
            "id": "igw-0c61e5eb34beb811b",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-igw"
            },
            "tags_all": {
              "Name": "dashboard-igw"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "igw-0c61e5eb34beb811b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "counting-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/counting-alb/8114f7dd4097231c",
            "arn_suffix": "app/counting-alb/8114f7dd4097231c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-counting-alb-1812425210.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/counting-alb/8114f7dd4097231c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "counting-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0223e2948edccef6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04edc61739d575b4b"
              },
              {
                "subnet_id": "subnet-0caf96893589354a6"
              }
            ],
            "subnets": [
              "subnet-04edc61739d575b4b",
              "subnet-0caf96893589354a6"
            ],
            "tags": {
              "Name": "counting-alb"
            },
            "tags_all": {
              "Name": "counting-alb"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/counting-alb/8114f7dd4097231c"
          },
          "dependencies": [
            "aws_security_group.counting-alb-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dashboard-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/dashboard-alb/61375478d224f671",
            "arn_suffix": "app/dashboard-alb/61375478d224f671",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dashboard-alb-379809942.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/dashboard-alb/61375478d224f671",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dashboard-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0eee37f8169f304ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03651b44de7d52f7e"
              },
              {
                "subnet_id": "subnet-03b86959dc75f9848"
              }
            ],
            "subnets": [
              "subnet-03651b44de7d52f7e",
              "subnet-03b86959dc75f9848"
            ],
            "tags": {
              "Name": "dashboard-alb"
            },
            "tags_all": {
              "Name": "dashboard-alb"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/dashboard-alb/61375478d224f671"
          },
          "dependencies": [
            "aws_security_group.dashboard-alb-sg",
            "aws_subnet.dashboard-public-subnet1",
            "aws_subnet.dashboard-public-subnet2",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "counting-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/counting-alb/8114f7dd4097231c/3e92aeaae268a9bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/counting-alb/8114f7dd4097231c/3e92aeaae268a9bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/counting-alb/8114f7dd4097231c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/counting-alb/8114f7dd4097231c/3e92aeaae268a9bc"
          },
          "dependencies": [
            "aws_lb.counting-alb",
            "aws_lb_target_group.counting-instance-tg",
            "aws_security_group.counting-alb-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dashboard-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/dashboard-alb/61375478d224f671/dca0c7c3a80dfa9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/dashboard-alb/61375478d224f671/dca0c7c3a80dfa9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/dashboard-alb/61375478d224f671",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:listener/app/dashboard-alb/61375478d224f671/dca0c7c3a80dfa9b"
          },
          "dependencies": [
            "aws_lb.dashboard-alb",
            "aws_lb_target_group.dashboard-instance-tg",
            "aws_security_group.dashboard-alb-sg",
            "aws_subnet.dashboard-public-subnet1",
            "aws_subnet.dashboard-public-subnet2",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "counting-instance-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "arn_suffix": "targetgroup/counting-instance-tg/69502bbf7d55e916",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "9000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/counting-alb/8114f7dd4097231c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "counting-instance-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "counting-instance-tg"
            },
            "tags_all": {
              "Name": "counting-instance-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard-instance-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "arn_suffix": "targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:loadbalancer/app/dashboard-alb/61375478d224f671"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dashboard-instance-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dashboard-instance-tg"
            },
            "tags_all": {
              "Name": "dashboard-instance-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "counting-instance1-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916,i-054e26f604d76fb7c,9000",
            "port": 9000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "target_id": "i-054e26f604d76fb7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "port": 9000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "target_id": "i-054e26f604d76fb7c"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_instance.counting_instance1",
            "aws_internet_gateway.dashboard-igw",
            "aws_lb_target_group.counting-instance-tg",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_security_group.counting-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "counting-instance2-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916,i-0ea3269156ba70370,9000",
            "port": 9000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "target_id": "i-0ea3269156ba70370"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "port": 9000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/counting-instance-tg/69502bbf7d55e916",
            "target_id": "i-0ea3269156ba70370"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_instance.counting_instance2",
            "aws_internet_gateway.dashboard-igw",
            "aws_lb_target_group.counting-instance-tg",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_security_group.counting-instance-sg",
            "aws_subnet.dashboard-private-subnet2",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dashboard-instance1-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea,i-085b102572d3305ca,8000",
            "port": 8000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "target_id": "i-085b102572d3305ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "port": 8000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "target_id": "i-085b102572d3305ca"
          },
          "dependencies": [
            "aws_instance.dashboard_instance1",
            "aws_lb.counting-alb",
            "aws_lb_target_group.dashboard-instance-tg",
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dashboard-instance2-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea,i-032d316415fbbb126,8000",
            "port": 8000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "target_id": "i-032d316415fbbb126"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "port": 8000,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:187739379851:targetgroup/dashboard-instance-tg/2832bfc9eca8a1ea",
            "target_id": "i-032d316415fbbb126"
          },
          "dependencies": [
            "aws_instance.dashboard_instance2",
            "aws_lb.counting-alb",
            "aws_lb_target_group.dashboard-instance-tg",
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-private-subnet2",
            "aws_vpc.dashboard-vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dashboard-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a32279178ed89b6",
            "association_id": "eipassoc-085e6318d69a52cd5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-00ceb6f6c907a40fd",
            "network_interface_id": "eni-0ea9342ae1a4ad21c",
            "private_ip": "10.0.0.77",
            "public_ip": "13.196.139.167",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03651b44de7d52f7e",
            "tags": {
              "Name": "dashboard-nat"
            },
            "tags_all": {
              "Name": "dashboard-nat"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "nat-00ceb6f6c907a40fd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dashboard-private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:route-table/rtb-035cc19b975411ad3",
            "id": "rtb-035cc19b975411ad3",
            "owner_id": "187739379851",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ceb6f6c907a40fd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dashboard-private-rtb"
            },
            "tags_all": {
              "Name": "dashboard-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "rtb-035cc19b975411ad3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_nat_gateway.dashboard-nat",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard-private-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a8f3eeb9980ad05",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-035cc19b975411ad3",
            "subnet_id": "subnet-0caf96893589354a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "rtbassoc-05a8f3eeb9980ad05",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_subnet.dashboard-private-subnet1",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard-private-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a24c79d1e575c4a7",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-035cc19b975411ad3",
            "subnet_id": "subnet-04edc61739d575b4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "rtbassoc-0a24c79d1e575c4a7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.dashboard-nat-eip",
            "aws_internet_gateway.dashboard-igw",
            "aws_nat_gateway.dashboard-nat",
            "aws_route_table.dashboard-private-rtb",
            "aws_subnet.dashboard-private-subnet2",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0531dc0719ed4bd91",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-093b93abf4a628a4b",
            "subnet_id": "subnet-03651b44de7d52f7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "rtbassoc-0531dc0719ed4bd91",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_default_route_table.dashboard-public-rtb",
            "aws_internet_gateway.dashboard-igw",
            "aws_subnet.dashboard-public-subnet1",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062be9885a7a82e1b",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-093b93abf4a628a4b",
            "subnet_id": "subnet-03b86959dc75f9848"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "rtbassoc-062be9885a7a82e1b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_default_route_table.dashboard-public-rtb",
            "aws_internet_gateway.dashboard-igw",
            "aws_subnet.dashboard-public-subnet2",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group/sg-0223e2948edccef6b",
            "description": "Security Group for Counting ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Route to Counting Instances",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0226789ca3ab639ac"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "id": "sg-0223e2948edccef6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from Dashboard Instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db4d0bf948c68b9d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "counting-alb-sg",
            "name_prefix": "",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-alb-sg"
            },
            "tags_all": {
              "Name": "counting-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sg-0223e2948edccef6b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group/sg-0226789ca3ab639ac",
            "description": "Security Group for Counting Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow instances to reach internet via NAT GW",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0226789ca3ab639ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH administration from Jump Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056a25ae9c351c56d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from Counting ALB",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0223e2948edccef6b"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "counting-instance-sg",
            "name_prefix": "",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-instance-sg"
            },
            "tags_all": {
              "Name": "counting-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sg-0226789ca3ab639ac",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group/sg-0eee37f8169f304ca",
            "description": "Security Group for Dashboard ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Route to dashboard instances",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db4d0bf948c68b9d"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-0eee37f8169f304ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dashboard-alb-sg",
            "name_prefix": "",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-alb-sg"
            },
            "tags_all": {
              "Name": "dashboard-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sg-0eee37f8169f304ca",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group/sg-0db4d0bf948c68b9d",
            "description": "Security Group for Dashboard Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow instances to reach internet via NAT GW",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Route to Dashboard ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0223e2948edccef6b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0db4d0bf948c68b9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from Dashboard ALB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056a25ae9c351c56d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from Dashboard ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eee37f8169f304ca"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dashboard-instance-sg",
            "name_prefix": "",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-instance-sg"
            },
            "tags_all": {
              "Name": "dashboard-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sg-0db4d0bf948c68b9d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump-host-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group/sg-056a25ae9c351c56d",
            "description": "Security Group for Jump Host",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "SSH management to counting instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0226789ca3ab639ac"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH management to counting instances",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0226789ca3ab639ac"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "SSH management to dashboard instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db4d0bf948c68b9d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH management to dashboard instances",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db4d0bf948c68b9d"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-056a25ae9c351c56d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump-host-sg",
            "name_prefix": "",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jump-host-sg"
            },
            "tags_all": {
              "Name": "jump-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sg-056a25ae9c351c56d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:subnet/subnet-0caf96893589354a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf96893589354a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187739379851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-private-subnet1"
            },
            "tags_all": {
              "Name": "dashboard-private-subnet1"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "subnet-0caf96893589354a6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:subnet/subnet-04edc61739d575b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04edc61739d575b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187739379851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-private-subnet2"
            },
            "tags_all": {
              "Name": "dashboard-private-subnet2"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "subnet-04edc61739d575b4b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:subnet/subnet-03651b44de7d52f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03651b44de7d52f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187739379851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-public-subnet1"
            },
            "tags_all": {
              "Name": "dashboard-public-subnet1"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "subnet-03651b44de7d52f7e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:subnet/subnet-03b86959dc75f9848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b86959dc75f9848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187739379851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-public-subnet2"
            },
            "tags_all": {
              "Name": "dashboard-public-subnet2"
            },
            "vpc_id": "vpc-0bdacf9ef50fa0341"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "subnet-03b86959dc75f9848",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dashboard-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:vpc/vpc-0bdacf9ef50fa0341",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05efb61a9ccdad85d",
            "default_route_table_id": "rtb-093b93abf4a628a4b",
            "default_security_group_id": "sg-0c26c2f2e685a1f9e",
            "dhcp_options_id": "dopt-0c9f264388866960e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdacf9ef50fa0341",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093b93abf4a628a4b",
            "owner_id": "187739379851",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-vpc"
            },
            "tags_all": {
              "Name": "dashboard-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "vpc-0bdacf9ef50fa0341",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "counting-alb_outbound_counting-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0e97b307dfef24c94",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Route to Counting Instances",
            "from_port": 9000,
            "id": "sgr-0e97b307dfef24c94",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0226789ca3ab639ac",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0223e2948edccef6b",
            "security_group_rule_id": "sgr-0e97b307dfef24c94",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0e97b307dfef24c94",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-alb-sg",
            "aws_security_group.counting-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "counting_instance_outbound_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-015e24f8e2f4a30c3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow instances to reach internet via NAT GW",
            "from_port": 443,
            "id": "sgr-015e24f8e2f4a30c3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0226789ca3ab639ac",
            "security_group_rule_id": "sgr-015e24f8e2f4a30c3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-015e24f8e2f4a30c3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dashboard-alb_outbound_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0c69553bc42664bcf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Route to dashboard instances",
            "from_port": 8000,
            "id": "sgr-0c69553bc42664bcf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db4d0bf948c68b9d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0eee37f8169f304ca",
            "security_group_rule_id": "sgr-0c69553bc42664bcf",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0c69553bc42664bcf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dashboard-instance_outbound_counting-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0897dfbedca996e00",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Route to Dashboard ALB",
            "from_port": 80,
            "id": "sgr-0897dfbedca996e00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0223e2948edccef6b",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0db4d0bf948c68b9d",
            "security_group_rule_id": "sgr-0897dfbedca996e00",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0897dfbedca996e00",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dashboard_instance_outbound_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0e8f9763b74a4bbba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow instances to reach internet via NAT GW",
            "from_port": 443,
            "id": "sgr-0e8f9763b74a4bbba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0db4d0bf948c68b9d",
            "security_group_rule_id": "sgr-0e8f9763b74a4bbba",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0e8f9763b74a4bbba",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "jump_host_outbound_counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0bfce02fe06b6847f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH management to counting instances",
            "from_port": 9000,
            "id": "sgr-0bfce02fe06b6847f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0226789ca3ab639ac",
            "region": "ap-northeast-1",
            "security_group_id": "sg-056a25ae9c351c56d",
            "security_group_rule_id": "sgr-0bfce02fe06b6847f",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0bfce02fe06b6847f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "jump_host_outbound_counting-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0779be2bf3ad39343",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH management to counting instances",
            "from_port": 22,
            "id": "sgr-0779be2bf3ad39343",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0226789ca3ab639ac",
            "region": "ap-northeast-1",
            "security_group_id": "sg-056a25ae9c351c56d",
            "security_group_rule_id": "sgr-0779be2bf3ad39343",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0779be2bf3ad39343",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "jump_host_outbound_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-03da7d543d608a9e7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH management to dashboard instances",
            "from_port": 8000,
            "id": "sgr-03da7d543d608a9e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db4d0bf948c68b9d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-056a25ae9c351c56d",
            "security_group_rule_id": "sgr-03da7d543d608a9e7",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-03da7d543d608a9e7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "jump_host_outbound_dashboard-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-052b23efc04128d16",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH management to dashboard instances",
            "from_port": 22,
            "id": "sgr-052b23efc04128d16",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db4d0bf948c68b9d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-056a25ae9c351c56d",
            "security_group_rule_id": "sgr-052b23efc04128d16",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-052b23efc04128d16",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "counting-alb-inbound-dashboard-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-09541598e18222b23",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Traffic from Dashboard Instances",
            "from_port": 80,
            "id": "sgr-09541598e18222b23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db4d0bf948c68b9d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0223e2948edccef6b",
            "security_group_rule_id": "sgr-09541598e18222b23",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-09541598e18222b23",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "counting-instance-inbound-counting-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-07f97553d26c1f9fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Traffic from Counting ALB",
            "from_port": 9000,
            "id": "sgr-07f97553d26c1f9fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0223e2948edccef6b",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0226789ca3ab639ac",
            "security_group_rule_id": "sgr-07f97553d26c1f9fa",
            "tags": null,
            "tags_all": {},
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-07f97553d26c1f9fa",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-alb-sg",
            "aws_security_group.counting-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "counting-instance-inbound-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-098e627b7898ce5bf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH administration from Jump Host",
            "from_port": 22,
            "id": "sgr-098e627b7898ce5bf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-056a25ae9c351c56d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0226789ca3ab639ac",
            "security_group_rule_id": "sgr-098e627b7898ce5bf",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-098e627b7898ce5bf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dashboard-alb-inbound-all-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0e2dbb0772927ffa3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0e2dbb0772927ffa3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0eee37f8169f304ca",
            "security_group_rule_id": "sgr-0e2dbb0772927ffa3",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0e2dbb0772927ffa3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-alb-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dashboard-instance-inbound-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-09e9e599ea2241f12",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Traffic from Dashboard ALB",
            "from_port": 22,
            "id": "sgr-09e9e599ea2241f12",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-056a25ae9c351c56d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0db4d0bf948c68b9d",
            "security_group_rule_id": "sgr-09e9e599ea2241f12",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-09e9e599ea2241f12",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-instance-sg",
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dashboard-instance-inbound-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-0e3ebb87db74eebc7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Traffic from Dashboard ALB",
            "from_port": 8000,
            "id": "sgr-0e3ebb87db74eebc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0eee37f8169f304ca",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0db4d0bf948c68b9d",
            "security_group_rule_id": "sgr-0e3ebb87db74eebc7",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-0e3ebb87db74eebc7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard-alb-sg",
            "aws_security_group.dashboard-instance-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jump_host_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:187739379851:security-group-rule/sgr-036b06181cff65718",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgr-036b06181cff65718",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-056a25ae9c351c56d",
            "security_group_rule_id": "sgr-036b06181cff65718",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187739379851",
            "id": "sgr-036b06181cff65718",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.jump-host-sg",
            "aws_vpc.dashboard-vpc"
          ]
        }
      ]
    }
  ]
}